fixed option selector unaligned

--- a/srcs/requirements/frontend/static/css/styles.css
+++ b/srcs/requirements/frontend/static/css/styles.css
@@ -79,7 +79,7 @@ body {
 }
 
 .option.selected {
-    border: 0px;
+    border: 2px solid;
     background-color: black;
     color: white;
 }
